static/styles/main.css
/* Fonts */
@font-face {
    font-family: 'opensans_light';
    src: url('/vendor/opensans/opensans-light.woff2')       format('woff2');}
@font-face {
    font-family: 'opensans_regular';
    src: url('/vendor/opensans/opensans-regular.woff2')     format('woff2');}
@font-face {
    font-family: 'opensans_bold';
    src: url('/vendor/opensans/opensans-bold.woff2')        format('woff2');}
@font-face {
    font-family: 'opensans_italic';
    src: url('/vendor/opensans/opensans-italic.woff2')    format('woff2');}

.login-form {
    white-space: nowrap;
    float: right;
    position: relative;
    top: 2.7em;
    margin-right: 0.2em;
}
.login-form input[type="password"], input[type="text"] {
    color: #bbb;
    background-color: #373737;
    width: 7.5em;
    border-radius: 0;
    border-style: none;
    padding: 0.2em;
}
.login-form button {
    color: #bbb;
    background-color: #373737;
    border-radius: 0;
    border-style: none;
    padding: 0.2em;
}

.header-img {
    float: left;
    position: absolute;
    z-index: 1;
    margin: 0;
    top: 0.67em;
    image-rendering: crisp-edges;
}

@media only screen and (min-width: 700px) {
.header-img {
    position: relative;
}
}

.server-icon {
    height: 1.5em;
    vertical-align: middle;
    padding: 0.25em;
}
.online {
    background: #efe;
}
.offline {
    background: #fee;
}

.center {
    margin-left: auto;
    margin-right: auto;
}

/* Resets */
* {
    margin: 0;
    padding: 0;
}

table {
    border-collapse: collapse;
}

/* Hidden sections */
.hidden {
    display: none;
}

/* Horizontal rules */
hr {
    clear: both;
    color: #e3e3e5;
    background: #e3e3e5;
    height: 1px;
    border: 0;
    margin: 0 0 2.5em; }

/* Grid */
.container {
    position: relative;
    width: 100%;
    max-width: 960px;
    margin: 0 auto;
    padding: 0 2em;
    box-sizing: border-box;
}

/* rows */
.row {
    padding: 0;
    margin: 0;
}
.row:before,
.row:after {
    content:"";
    display:table;
}
.row:after {
    clear:both;
}

/* Columns */
.col {
    display: block;
    float:left;
    margin: 1% 0 1% 4%;
}
.col:first-child { margin-left: 0; }

@media only screen and (max-width: 480px) {
    .col {
        margin: 1% 0 1% 0%;
    }
}

/* Cells */
.cell1of1 {	width: 100%;}
.cell2of2 {	width: 100%;}
.cell1of2 {	width: 48%;}
@media only screen and (max-width: 480px) {
    .cell1of2, .cell2of2 { width: 100%; }
}

.cell3of3 {	width: 100%; }
.cell2of3 {	width: 65.33%; }
.cell1of3 {	width: 30.66%; }
@media only screen and (max-width: 600px) {
    .cell1of3, .cell2of3, .cell3of3 { margin: 0; width: 100%; }
}

.cell4of4 { width: 100%; }
.cell3of4 { width: 74%; }
.cell2of4 {	width: 48%; }
.cell1of4 {	width: 22%; }
@media only screen and (max-width: 700px) {
    .cell1of4, .cell2of4, .cell3of4, .cell4of4 { margin: 0; width: 100%; }
}

.cell5of5 { width: 100%; }
.cell4of5 { width: 79.2%; }
.cell3of5 { width: 58.4%; }
.cell2of5 { width: 37.6%; }
.cell1of5 { width: 16.8%; }
@media only screen and (max-width: 480px) {
    .cell1of5, .cell2of5, .cell3of5, .cell4of5, .cell5of5 { width: 100%; }
}

.cell6of6 { width: 100%; }
.cell5of6 { width: 82.66%; }
.cell4of6 { width: 65.33%; }
.cell3of6 { width: 48%; }
.cell2of6 { width: 30.66%; }
.cell1of6 { width: 13.33%; }
@media only screen and (max-width: 480px) {
    .cell1of6, .cell2of6, .cell3of6, .cell4of6, .cell5of6, .cell6of6 { width: 100%; }
}

.cell7of7 { width: 100%; }
.cell6of7 { width: 85.14%; }
.cell5of7 { width: 70.28%; }
.cell4of7 { width: 55.42%; }
.cell3of7 { width: 40.57%; }
.cell2of7 { width: 25.71%; }
.cell1of7 { width: 10.85%; }
@media only screen and (max-width: 480px) {
    .cell1of7, .cell2of7, .cell3of7, .cell4of7, .cell5of7, .cell6of7, .cell7of7 { width: 100%; }
}

.cell8of8 { width: 100%; }
.cell7of8 { width: 87%; }
.cell6of8 { width: 74%; }
.cell5of8 { width: 61%; }
.cell4of8 { width: 48%; }
.cell3of8 { width: 35%; }
.cell2of8 { width: 22%; }
.cell1of8 { width:  9%; }
@media only screen and (max-width: 480px) {
    .cell1of8, .cell2of8, .cell3of8, .cell4of8, .cell5of8, .cell6of8, .cell7of8, .cell8of8 { 	width: 100%; }
}

.container:before {
    content: "";
    position: fixed;
    left: -1em;
    right: 0;
    top: -1em;
    z-index: -1;
  
    display: block;
    background: url("../images/bg.png") repeat scroll 0% 0%, #373737 none repeat scroll 0% 0%;
    filter: brightness(60%) blur(1px);

    width: 110%;
    height: 110%;
}

/* Base Styles */
html, header {
    font-size: 100%; height: 100%;
    line-height: 1.5; }
.wrap {
    background: #FFF;
    margin: -2.5em -2em 0;
    padding: 3em 2em 2.5em 2em;
}

/* Typography */
body {
    color: #000;
    font-family: 'opensans_light', sans-serif;
    font-size: 1em;
    font-weight: 400; }
h1, h2, h3, h4, h5, h6 {
    color: #222;
    font-family: 'opensans_regular', sans-serif;
    font-weight: 300;
    letter-spacing: -.03em;
    line-height: 1;
    margin: 0 0 .8em; }
h1 { font-size: 1.6em; }
h2 { font-size: 1.5em; }
h3 { font-size: 1.4em; }
h4 { font-size: 1.3em; }
h5 { font-size: 1.2em; }
h6 { font-size: 1.1em; }
.home h1 {font-size: 1.5em}

p { line-height: 1.4em; }

strong, b, .bold, dt { font-family: 'opensans_bold', sans-serif; font-weight: normal;}
em, i, .italic { font-family: 'opensans_italic', sans-serif; font-weight: normal;}

/* Links */
a         { color: #005DB7; text-decoration: none; }
a:hover   { text-decoration: underline; }
a:visited { color: #005DB7; }
a:active,
a:focus   { outline: 0; }
a:target  { color: #007F00; }

/* Lists */
ul {
    list-style: circle inside; }
ol {
    list-style: decimal inside; }
ol, ul {
    padding-left: 0;
    margin-top: 0; }
ul ul,
ul ol,
ol ol,
ol ul {
    margin: 1.2em 0 1.2em 3em;
    font-size: 90%; }
li {
    margin-bottom: 0.3em; }
.lsn { list-style: none; }

/* Code */
pre {white-space: pre-wrap;}

code {
    background: #F1F1F1;
    border: 1px solid #E1E1E1;
    border-radius: 4px;
    font-size: 90%;
    margin: 0 .2em;
    padding: .2em .5em;
    white-space: nowrap; }
pre > code {
    display: block;
    overflow: auto;
    padding: 1rem 1.5em;
    white-space: pre;
    word-wrap: normal; }

/* Tables */
th,
td {
    padding: 0.1em 1em;
    text-align: left;
    border-bottom: 1px solid #E1E1E1; }
th:first-child,
td:first-child {
    padding-left: 0; }
th:last-child,
td:last-child {
    padding-right: 0; }

/* Spacing */
article { margin: 0; }
button,
.button {
    margin-bottom: 1em; }
input,
textarea,
select,
fieldset {
    margin-bottom: 1.5em; }
pre,
blockquote,
dl,
figure,
table,
p,
ul,
ol,
form {
    margin-bottom: 1.5em; }

/* Header */
header {
    margin: 0 -2em 1.5em;
}
header a img { display: block; margin: 1em auto 0.3em; }
header span { position: absolute !important; top: -9999em !important; left: -9999em !important; }

/* Navigation */
nav { position: relative; }
nav ul { background: #373737; list-style: none; margin: 0; text-align: center; width: 100%; }
nav ul li { display: inline-block; margin: 0; }
nav ul li a,
nav ul li a:visited,
nav ul li a:hover { color: #FFF; display: block; padding: .4em .8em; text-align: center; text-decoration: none; }
nav ul li a:hover { text-decoration: underline; }
nav ul li.active a,
nav ul li.active a:hover { background: #FFF; color: #000; }
nav li:hover ul a { background: #FFF; color: #005DB7; }
nav li ul a:hover { color: #000; }
nav li ul { display: none; position: absolute; width: auto; }
nav li ul li { display: block; float: none; }
nav li ul li a { min-width: 8em; width: auto; }
nav ul li a:hover + .sub, .sub:hover { display: block; }

.show-menu { text-decoration: none; color: #fff; background: #373737; text-align: center; padding: .4em 0; display: none; }

nav input[type=checkbox] { display: none; -webkit-appearance: none; }
nav input[type=checkbox]:checked ~ ul { display: block; }

@media screen and (max-width : 700px){
    nav ul {
        position: static;
        display: none;
    }
    nav ul li {
        display: block;
        width: auto;
    }
    .show-menu {
        display:block;
    }
}

/* Footer */
footer {
    background: #373737;
    color: #BBB;
    font-size: 0.9em;
    margin: 0 -2.2em -3em;
    padding: 1.5em 2em 0.25em 2em;
}
footer a, footer a:visited { color: #80e0ff; }
footer ul { list-style: none; }
footer li { border-bottom: 1px solid #555; }
footer li a { font-size: 0.9em;}
footer li a:hover { color: #EEE; text-decoration: none; }

/* home */
.home { padding: 2.5em 2em 0 2em; }
.home dt { margin: 1em 0 .3em; }

/* Clearing */
.container:after,
.row:after,
.u-cf {
    content: "";
    display: table;
    clear: both; }

